# Retro-Display-Simulator

./: .gitignore  CMakeLists.txt  README.md  bundle_resources.sh  info.xcf  release.bat  run.sh
configuration/: cmake_source_dir.h.in  project_name.txt.in
includes/learnopengl/: camera.h  filesystem.h  shader_m.h
includes/theypsilon/: boolean_button.h  camera.h  error.h  windows.h
resources/shaders/: frags.glsl  info_frags.glsl  vertex.glsl  voxel.fs  voxel.vs
src/: glad.c  main.cpp  resources.cpp  resources.h  win_main.cpp
